# IZ1_Gallaann

./: CMakeLists.txt  README.md  main.c  read_file.txt
.github/workflows/: CI.yml
gtests/: CMakeLists.txt  gtests.cpp
src/: CMakeLists.txt
src/pet/: CMakeLists.txt  pet.c  pet.h
src/storage/: CMakeLists.txt  storage.c  storage.h
